--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Doom Fire</title>
   </head>
   <body>
+    <h1>Doom Fire</h1>
     <div id="fireCanvas"></div>
+    <div class="actions">
+      <button id="sub">-</button>
+      <button id="min-fire">Min Fire</button>
+      <button id="max-fire">Max Fire</button>
+      <button id="sum">+</button>
+    </div>
+    <div class="action-debug">
+      <button id="button-debug">Toggle Debug Mode</button>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
